# AS

./: (1)setup_file.bat  (2)build.bat  (3)fix_dlls.bat  (3)run.bat  (4)rebuild.bat  (5)run.bat  (optional)fix_dlls.bat  (optional)rebuild.bat  .gitignore  CMakeLists.txt  build.bat
lib/: CMakeLists.txt
lib/include/: Engine.h  PathManager.h
lib/src/: Engine.cpp  PathManager.cpp
main/: CMakeLists.txt  main.cpp
main/src/: main.cpp
